force-app/main/default/objects/Opportunity/fields/Account_data_missing__c.field-meta.xml
<CustomField>
    <fullName>Account_data_missing__c</fullName>
    <description>If some specific Account data is missing we need to show a message on the Opportunity overview</description>
    <formula>OR(ISBLANK(Account.CVR__c),
   ISBLANK(Account.BillingStreet),
   ISBLANK(Account.BillingCity),
   ISBLANK(Account.BillingCountry),
   ISBLANK(Account.BillingPostalCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account data missing</label>
    <type>Checkbox</type>
</CustomField>