force-app/main/default/objects/Opportunity/fields/Account_Ownership_Outside_EU_etc__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership_Outside_EU_etc__c</fullName>
    <formula>TEXT( Account.Ownership_Outside_EU_etc__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Ownership Outside EU etc</label>
    <type>Text</type>
</CustomField>