force-app/main/default/objects/Opportunity/fields/Activation_bank__c.field-meta.xml
<CustomField>
    <fullName>Activation_bank__c</fullName>
    <description>Internal field used for compensation purposes to sum amount difference between sold and actuals if closed won quarter differs from Activation Case Close Quarter. Field used Declarative Lookup Rollup Summary (installed app) to sum correct amount for Activation Bank</description>
    <formula>IF((Activation_Closed_in_Quarter__c - Quarter__c) &lt;&gt; 0 , ( X12_Amount__c - Comp_K12_Amount_New_Sales_on_Closed__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum amount difference between Sold Amount and Actuals (what is implemented) if closed won quarter differs from Activation Case Close Quarter - this will be reflected on compensation for the quarter where Activation case closes</inlineHelpText>
    <label>Activation bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>