force-app/main/default/objects/Opportunity/fields/Activation_Closed_in_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Activation_Closed_in_Quarter__c</fullName>
    <description>Internal field used for compensation purposes to sum amount difference between sold and actuals in this quarter on Compensation object. The value is calculated on Case - however obtained on Quote as the Quote is directly linked to an Activation Case</description>
    <formula>SBQQ__PrimaryQuote__r.Activation_Closed_in_Quarter__c</formula>
    <inlineHelpText>Sets the number for the quarter in which the Activation Case related to this Opportunity is closed - if Activation Case is closed in a quarter from a previous year the quarter will be 0</inlineHelpText>
    <label>Activation Case Closed in Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>