force-app/main/default/objects/Opportunity/fields/Activation_Errors__c.field-meta.xml
<CustomField>
    <fullName>Activation_Errors__c</fullName>
    <label>Activation Errors</label>
    <type>TextArea</type>
</CustomField>