force-app/main/default/objects/Opportunity/fields/Awaiting_CXO_approval__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_CXO_approval__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Negotiation stage</description>
    <inlineHelpText>Has it been confirmed that the proposal has been given CXO acceptance?</inlineHelpText>
    <label>Received CXO acceptance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>