force-app/main/default/objects/Opportunity/fields/Business_Internet_Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Business_Internet_Quote_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Internet Quote Created</label>
    <type>Checkbox</type>
</CustomField>