force-app/main/default/objects/Opportunity/fields/Business_Internet_Ready_for_Spec_Quote__c.field-meta.xml
<CustomField>
    <fullName>Business_Internet_Ready_for_Spec_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Internet Ready for Spec Quote</label>
    <type>Checkbox</type>
</CustomField>