force-app/main/default/objects/Opportunity/fields/Buying_process_understood__c.field-meta.xml
<CustomField>
    <fullName>Buying_process_understood__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Qualification stage</description>
    <inlineHelpText>Do we understand the customer&apos;s buying process for this particular deal?</inlineHelpText>
    <label>Buying process understood?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>