force-app/main/default/objects/Opportunity/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field indicates to which case is the opportunity related. Case will be created by a flow when the Opportunity is closed won and this field will be populated with the same flow.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>