force-app/main/default/objects/Opportunity/fields/Case_Handover_Active__c.field-meta.xml
<CustomField>
    <fullName>Case_Handover_Active__c</fullName>
    <formula>IF (($Permission.Case_Handover = true  &amp;&amp;  $CustomMetadata.Telia_Settings__mdt.Settings.Product_FactBook_Activation_Date__c &lt;= TODAY()),true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Handover Active</label>
    <type>Checkbox</type>
</CustomField>