force-app/main/default/objects/Opportunity/fields/Closed_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Amount__c</fullName>
    <description>Internal field used in reporting</description>
    <formula>IF(ISPICKVAL( StageName , &apos;Closed Won&apos;), Amount, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>