force-app/main/default/objects/Opportunity/fields/Comp_MBB__c.field-meta.xml
<CustomField>
    <fullName>Comp_MBB__c</fullName>
    <description>New sales from other channels are loaded in product categories in order to add product gearing as defined in compensation model</description>
    <inlineHelpText>New sales from other channels are loaded in product categories in order to add product gearing as defined in compensation model</inlineHelpText>
    <label>Comp MBB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>