force-app/main/default/objects/Opportunity/fields/Comp_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Comp_MPLS__c</fullName>
    <description>New sales from other channels are loaded in product categories in order to add product gearing as defined in compensation model</description>
    <inlineHelpText>New sales from other channels are loaded in product categories in order to add product gearing as defined in compensation model</inlineHelpText>
    <label>Comp MPLS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>