force-app/main/default/objects/Opportunity/fields/Competitors_identified__c.field-meta.xml
<CustomField>
    <fullName>Competitors_identified__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Proposal stage</description>
    <inlineHelpText>Do we have a clear picture of the competitors competing for this business?</inlineHelpText>
    <label>Competitors identified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>