force-app/main/default/objects/Opportunity/fields/Complex_Configuration_Network_Setup__c.field-meta.xml
<CustomField>
    <fullName>Complex_Configuration_Network_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Configuration Network Setup</label>
    <type>Checkbox</type>
</CustomField>