force-app/main/default/objects/Opportunity/fields/Complex_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Complex_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Opportunity</label>
    <type>Checkbox</type>
</CustomField>