force-app/main/default/objects/Opportunity/fields/Complex_Pricing_Contractual__c.field-meta.xml
<CustomField>
    <fullName>Complex_Pricing_Contractual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Pricing Contractual</label>
    <type>Checkbox</type>
</CustomField>