force-app/main/default/objects/Opportunity/fields/Complex_Size_of_Order__c.field-meta.xml
<CustomField>
    <fullName>Complex_Size_of_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Size of Order</label>
    <type>Checkbox</type>
</CustomField>