force-app/main/default/objects/Opportunity/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <description>Field to describe if a sale is complex, requiring some additional assistance to complete</description>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Very easy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Easy</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Hard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>