force-app/main/default/objects/Opportunity/fields/Contact_Role_DecisionMaker_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_DecisionMaker_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numer of contact role Decision Maker</description>
    <label>Contact Role DecisionMaker Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>