force-app/main/default/objects/Opportunity/fields/Contact_Role_Mobile_Data_Collector_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Mobile_Data_Collector_Count__c</fullName>
    <description>Used in DLRS to calculate number of contacts of type Mobile Data Collector on Opportunity Contact Role.</description>
    <label>Contact Role Mobile Data Collector Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>