force-app/main/default/objects/Opportunity/fields/Contract_signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_signed__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Closing stage</description>
    <inlineHelpText>Has the contract been signed?</inlineHelpText>
    <label>Contract signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>