force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Added for Home Office</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Framework Agreement</fullName>
            </value>
            <value>
                <fullName>Summary Contract Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>