force-app/main/default/objects/Opportunity/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>User Story ID: 47,48,49
Only used on Target opportunities</description>
    <inlineHelpText>What percentage of opportunities does the Rep win on average</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>