force-app/main/default/objects/Opportunity/fields/Customer_s_needs_understood__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_needs_understood__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Needs Analysis stage</description>
    <inlineHelpText>Do we know the customer&apos;s reason(s) for needing our services?</inlineHelpText>
    <label>Customer&apos;s needs understood?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>