force-app/main/default/objects/Opportunity/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <description>Internal field used to load new sales from other cahnnels through dataloader (done once a week)</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal field used to load new sales from other cahnnels through dataloader (done once a week)</inlineHelpText>
    <label>CVR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>