force-app/main/default/objects/Opportunity/fields/Decision_criteria_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Decision_criteria_confirmed__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Qualification stage</description>
    <inlineHelpText>Have the decision criteria been confirmed by the decision maker(s)?</inlineHelpText>
    <label>Decision criteria confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>