force-app/main/default/objects/Opportunity/fields/Decision_makers_identified__c.field-meta.xml
<CustomField>
    <fullName>Decision_makers_identified__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Qualification stage</description>
    <inlineHelpText>Have we identified the key decision maker(s) and know who is in charge of this particular deal?</inlineHelpText>
    <label>Decision makers identified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>