force-app/main/default/objects/Opportunity/fields/DecisionMakerNotFound__c.field-meta.xml
<CustomField>
    <fullName>DecisionMakerNotFound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a technical decision maker for some reason is not required, user can select this field to continue work without any decision maker.</description>
    <label>Technical Decision Maker NOT found</label>
    <type>Checkbox</type>
</CustomField>