force-app/main/default/objects/Opportunity/fields/Delivery_Description__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Description__c</fullName>
    <description>Description for delivery</description>
    <label>Delivery Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>