force-app/main/default/objects/Opportunity/fields/Delivery_outside_EU_etc__c.field-meta.xml
<CustomField>
    <fullName>Delivery_outside_EU_etc__c</fullName>
    <description>The products in scope are to be delivered outside EU, Great Britain, Norway, Faroe Islands, Switzerland, Greenland, North America, Australia and New Zealand</description>
    <inlineHelpText>The products in scope are to be delivered outside EU, Great Britain, Norway, Faroe Islands, Switzerland, Greenland, North America, Australia and New Zealand</inlineHelpText>
    <label>Delivery Outside EU etc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>