force-app/main/default/objects/Opportunity/fields/Different_owner__c.field-meta.xml
<CustomField>
    <fullName>Different_owner__c</fullName>
    <formula>IF( Account.OwnerId &lt;&gt;  OwnerId , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different owner</label>
    <type>Checkbox</type>
</CustomField>