force-app/main/default/objects/Opportunity/fields/Force_an_update__c.field-meta.xml
<CustomField>
    <fullName>Force_an_update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field used by admins to temporarily force certain automations to run.</description>
    <label>Force an update</label>
    <type>Checkbox</type>
</CustomField>