force-app/main/default/objects/Opportunity/fields/Good_fit__c.field-meta.xml
<CustomField>
    <fullName>Good_fit__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Qualification stage</description>
    <inlineHelpText>No or very few changes to our approach will be required to solve their business issues?</inlineHelpText>
    <label>Good fit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>