force-app/main/default/objects/Opportunity/fields/Home_Office_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Accepted_Date__c</fullName>
    <description>Date for when customer accepted Home Office data collection in portal</description>
    <label>Home Office Accepted Date</label>
    <type>Date</type>
</CustomField>