force-app/main/default/objects/Opportunity/fields/Home_Office_Accepted_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Accepted_in_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked customer has accepted data collection is correct and done in the portal for Home Office</description>
    <label>Home Office Accepted in Portal</label>
    <type>Checkbox</type>
</CustomField>