force-app/main/default/objects/Opportunity/fields/Home_Office_Portal_Step__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Portal_Step__c</fullName>
    <label>Home Office Portal Step</label>
    <length>10</length>
    <type>Text</type>
</CustomField>