force-app/main/default/objects/Opportunity/fields/Home_Office_Product_Preference__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Product_Preference__c</fullName>
    <label>Home Office Product Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Coax</fullName>
                <isActive>false</isActive>
                <label>Coax</label>
            </value>
            <value>
                <fullName>Fiber</fullName>
                <isActive>false</isActive>
                <label>Fiber</label>
            </value>
            <value>
                <fullName>xDSL</fullName>
                <isActive>false</isActive>
                <label>xDSL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>