force-app/main/default/objects/Opportunity/fields/Home_Office_Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Quote_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a Home Office Quote Has been created on the Opportunity, this is checked</description>
    <label>Home Office Quote Created</label>
    <type>Checkbox</type>
</CustomField>