force-app/main/default/objects/Opportunity/fields/Home_Office_Ready_for_Specified_Quote__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Ready_for_Specified_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked customer has provided all data in the portal and user can now create a quote</description>
    <label>Home Office Ready for Specified Quote</label>
    <type>Checkbox</type>
</CustomField>