force-app/main/default/objects/Opportunity/fields/Implementation_Period_weeks__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Period_weeks__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Added for home office</description>
    <label>Implementation Period (weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>