force-app/main/default/objects/Opportunity/fields/Intent_to_buy__c.field-meta.xml
<CustomField>
    <fullName>Intent_to_buy__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Needs Analysis stage</description>
    <inlineHelpText>Have the decision makers indicated that they intend to buy our services?</inlineHelpText>
    <label>Intent to buy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>