force-app/main/default/objects/Opportunity/fields/Knowledge_about_customer_s_priorities__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_about_customer_s_priorities__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Needs Analysis stage</description>
    <inlineHelpText>Do we know what is important for the customer?</inlineHelpText>
    <label>Knowledge about customer&apos;s priorities?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>