force-app/main/default/objects/Opportunity/fields/Legal_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_Stage__c</fullName>
    <label>Legal Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>