force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>User Story ID: 45</description>
    <inlineHelpText>The reason we lost the business</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Our relation to the customer</fullName>
                <label>Manglende relationer</label>
            </value>
            <value>
                <fullName>Our Products are missing features</fullName>
                <label>Manglende produkter (beskriv i Other Loss Reason)</label>
            </value>
            <value>
                <fullName>Onboarding was not strong enough</fullName>
                <label>Mangelfuld implementering</label>
            </value>
            <value>
                <fullName>Customer Service was not good enough</fullName>
                <label>Mangelfuld kundeservice</label>
            </value>
            <value>
                <fullName>Our prices are too high</fullName>
                <label>Pris</label>
            </value>
            <value>
                <fullName>Mangelfuld subsidie</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
                <label>Opgivet</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Andet/Ved ikke (beskriv i Other Loss Reason)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>